Added new menu bar items
Add links to the Prime Minister & Political parties controllers

--- a/MelbournePrimeMinisters/Views/Shared/_Layout.cshtml
+++ b/MelbournePrimeMinisters/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Prime Ministers", "Index", "PrimeMinisters")</li>
+                    <li>@Html.ActionLink("Political Parties", "Index", "PoliticalParties")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
